k8s/talos/Not-ready/kube-prometheus-stack/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik 
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.bigd.no`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: kube-prometheus-stack-grafana
              secure: true
              sameSite: none
  tls:
    secretName: local-bigd-no-tls
